--- a/contact.css
+++ b/contact.css
@@ -44,3 +44,26 @@ input[type=text], textarea {
     background-color: #f2f2f2;
     padding: 20px;
   }
+  .error-message{
+    color: red;
+    font-size: 30px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    justify-content: flex-start;
+    text-align: left;
+    padding-left: 5%;
+    
+  }
+  
+  .porosia-butoni{
+    display: block;
+    margin-left: 45%;
+    margin-top:10px;
+    background-color: darkblue;
+    font-size: 16px;
+    font-weight: bolder;
+    padding: 10px;
+    border-radius: 6px;
+    color: whitesmoke;
+    cursor: pointer;
+  }
