--- a/home.css
+++ b/home.css
@@ -1,6 +1,14 @@
 *{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+.foto-container {
+    display: flex; 
+    flex-direction: column;
+    width: 1;
+    flex-wrap: wrap; 
+    justify-content: center; 
+}
 body{
     margin: 0;
     width: 100%;
@@ -66,6 +74,7 @@ span{
     align-items: center;
     justify-content: center;
     margin: 5px;
+    text-align: center;
 }
 .button{
     display: flex;
