--- a/home.css
+++ b/home.css
@@ -2,13 +2,7 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.foto-container {
-    display: flex; 
-    flex-direction: column;
-    width: 1;
-    flex-wrap: wrap; 
-    justify-content: center; 
-}
+
 body{
     margin: 0;
     width: 100%;
@@ -38,7 +32,7 @@ span{
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: flex-end;
+         justify-content: space-around;
         align-items: flex-start;
         align-content: flex-start;
     
@@ -76,22 +70,28 @@ span{
     align-items: center;
     justify-content: center;
     margin: 5px;
+    
     text-align: center;
+    position: relative; /* shtojme kete linje per te perdorur pozicionin e paster */
+
 }
 .button{
     display: flex;
     justify-content: center;
     text-align: center;
     width: 200px;
-    padding: 10px;
+    padding:10px;
     font-weight: bolder;
     font-size: 100px;
     cursor: pointer;
+
+ 
+    
 }
 
 .blue-button{ 
     background-color: rgb(18, 18, 233);
-    font-size: 14px;
+    font-size: 18px;
     font-weight: bolder;
     padding: 10px;
     border-radius: 6px;
