--- a/about.css
+++ b/about.css
@@ -49,71 +49,23 @@ h1{
     
 }
 
-.slider-frame{
-    overflow: hidden;
-    justify-content: center;    
-    height: 400px;
-    width: 500px;
-    margin-left: 250px;
-    margin-top: 50px;
-}
 
-#img{
-    width: 400px;
-    height: 400px;
-}
+
 
 /*---------- SLIDER --------------*/
 
 
-@keyframes slide_animation{
-    0% {left:0px;}
-    10% {left:0px;}
-    20% {left:1200px;}
-    30% {left:1200px;}
-    40% {left: 2400px;}
-    50% {left: 2400px;}
-    60% {left: 1200px;}
-    70% {left: 1200px;}
-    80% {left: 0px;}
-    90% {left: 0px;}
-    100% {left:0px;}
+#kontenti {
+    display: flex ;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Segoe UI light', Tahoma;
+    width: 4%; /* Ndryshojeni këtë në një vlerë më të madhe për të zënë më shumë hapësirë */
+    margin: auto;
 }
 
-@-webkit-keyframes slide_animation{
-    0% {left:0px;}
-    10% {left:0px;}
-    20% {left:1200px;}
-    30% {left:1200px;}
-    40% {left: 2400px;}
-    50% {left: 2400px;}
-    60% {left: 1200px;}
-    70% {left: 1200px;}
-    80% {left: 0px;}
-    90% {left: 0px;}
-    100% {left:0px;}
-}
-
-.slide-images{
-    width: 3600px;
-    height: 800px;
-    margin: 0 0 0 -2400px;
-    position: relative;
-    -webkit-animation-name: slide_animation;
-    animation-name: slide_animation;
-    -webkit-animation-duration: 20s;
-    animation-duration: 20s;
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
-    -webkit-animation-direction: alternate;
-    animation-direction: alternate;
-    -webkit-animation-play-state: running;
-    animation-play-state: running;
-}
-
-.img-container{
-    height: 800px;
-    width: 1200px;
-    position: relative;
-    float: left;
+#kontenti img {
+    max-width: 100%; /* Ndryshojeni këtë në një vlerë më të madhe për të zmadhuar madhësinë e imazhit */
+    height: auto;
 }
