--- a/home.css
+++ b/home.css
@@ -2,6 +2,9 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.hide{
+    display:none;
+}
 
 body{
     margin: 0;
